lots of changes made to project, still in progress

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-CAT_API_KEY=62b070bd-52d8-446e-8778-c710511d3f62
+CAT_API_KEY= 62b070bd-52d8-446e-8778-c710511d3f62
+MOVIE_API=07e9ba3850c353707add2507cf19fbaf
+SKIP_PREFLIGHT_CHECK=true
+application_id=c9f6666e
+application_keys=66d96ebe2ee152f28bed15343c6a769c
