--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@reach/dialog": "^0.11.2",
     "axios": "^0.20.0",
     "formik": "^2.2.1",
     "react": "^16.13.1",
