--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
     "@reach/dialog": "^0.11.2",
     "axios": "^0.20.0",
-    "formik": "^2.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "formik": "^2.2.5",
+    "prop-types": "^15.6.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0",
+    "react-scripts": "^4.0.1",
+    "react-transition-group": "^2.5.3",
     "yup": "^0.29.3"
   },
   "scripts": {
