--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-photo-gallery": "^8.0.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-transition-group": "^2.5.3",
