--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.9.1",
     "@reach/dialog": "^0.11.2",
     "axios": "^0.20.0",
+    "dotenv": "^8.2.0",
     "formik": "^2.2.5",
     "prop-types": "^15.6.2",
     "react": "^16.14.0",
