--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-photo-gallery": "^8.0.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
