--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
     "@reach/dialog": "^0.11.2",
     "axios": "^0.20.0",
     "dotenv": "^8.2.0",
+    "firebase": "^8.2.0",
     "formik": "^2.2.5",
     "prop-types": "^15.6.2",
     "react": "^16.14.0",
