--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@material-ui/icons": "^4.9.1",
     "@reach/dialog": "^0.11.2",
     "axios": "^0.20.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "firebase": "^8.2.0",
     "formik": "^2.2.5",
     "http-proxy-middleware": "^1.0.6",
+    "mongoose": "^5.11.19",
     "netlify-cli": "^2.68.4",
     "prop-types": "^15.6.2",
     "react": "^16.14.0",
