--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
     "@reach/dialog": "^0.11.2",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
+    "axios-version": "^1.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
