--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.15",
     "@material-ui/core": "^4.11.1",
     "@material-ui/icons": "^4.9.1",
     "@reach/dialog": "^0.11.2",
@@ -14,6 +15,7 @@
     "express": "^4.17.1",
     "firebase": "^8.2.0",
     "formik": "^2.2.6",
+    "graphql": "^15.5.0",
     "http-proxy-middleware": "^1.0.6",
     "mongoose": "^5.11.19",
     "netlify-cli": "^2.68.4",
